--- a/converter/convertsettings.lfm
+++ b/converter/convertsettings.lfm
@@ -14,8 +14,8 @@ object ConvertSettingsForm: TConvertSettingsForm
   LCLVersion = '1.3'
   object ButtonPanel1: TButtonPanel
     Left = 6
-    Height = 38
-    Top = 371
+    Height = 34
+    Top = 375
     Width = 643
     OKButton.Name = 'OKButton'
     OKButton.DefaultCaption = True
@@ -33,7 +33,7 @@ object ConvertSettingsForm: TConvertSettingsForm
   object UnitReplaceDivider: TDividerBevel
     AnchorSideTop.Control = InputPathLabel
     Left = 380
-    Height = 20
+    Height = 13
     Top = 9
     Width = 262
     Caption = 'Unit Replacements'
@@ -51,8 +51,8 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideRight.Control = UnitReplaceDivider
     AnchorSideRight.Side = asrBottom
     Left = 380
-    Height = 20
-    Top = 68
+    Height = 13
+    Top = 61
     Width = 262
     Caption = 'Unknown properties'
     Anchors = [akTop, akLeft, akRight]
@@ -70,7 +70,7 @@ object ConvertSettingsForm: TConvertSettingsForm
     Left = 381
     Height = 25
     Hint = 'Unit names in uses section of a source unit'
-    Top = 30
+    Top = 23
     Width = 118
     BorderSpacing.Left = 1
     BorderSpacing.Top = 1
@@ -87,8 +87,8 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideRight.Control = UnitReplaceDivider
     AnchorSideRight.Side = asrBottom
     Left = 380
-    Height = 20
-    Top = 127
+    Height = 13
+    Top = 113
     Width = 262
     Caption = 'Type Replacements'
     Anchors = [akTop, akLeft, akRight]
@@ -108,7 +108,7 @@ object ConvertSettingsForm: TConvertSettingsForm
     Left = 381
     Height = 25
     Hint = 'Unknown types in form file (DFM/LFM)'
-    Top = 148
+    Top = 127
     Width = 118
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 1
@@ -126,8 +126,8 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideRight.Control = UnitReplaceDivider
     AnchorSideRight.Side = asrBottom
     Left = 380
-    Height = 20
-    Top = 186
+    Height = 13
+    Top = 165
     Width = 262
     Caption = 'Function Replacements'
     Anchors = [akTop, akLeft, akRight]
@@ -145,8 +145,8 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideRight.Control = UnitReplaceDivider
     AnchorSideRight.Side = asrBottom
     Left = 380
-    Height = 20
-    Top = 261
+    Height = 13
+    Top = 233
     Width = 262
     Caption = 'Coordinate Offsets'
     Anchors = [akTop, akLeft, akRight]
@@ -166,7 +166,7 @@ object ConvertSettingsForm: TConvertSettingsForm
     Left = 381
     Height = 25
     Hint = 'Some Delphi functions can be replaced with a LCL function'
-    Top = 207
+    Top = 179
     Width = 118
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 1
@@ -186,7 +186,7 @@ object ConvertSettingsForm: TConvertSettingsForm
     Left = 381
     Height = 25
     Hint = 'Some Delphi functions can be replaced with a LCL function'
-    Top = 282
+    Top = 247
     Width = 118
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 1
@@ -202,16 +202,16 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideTop.Control = InputPathListBox
     AnchorSideTop.Side = asrBottom
     Left = 12
-    Height = 113
+    Height = 85
     Hint = 'xxx'
-    Top = 79
-    Width = 224
+    Top = 107
+    Width = 165
     Anchors = [akLeft, akBottom]
     AutoSize = True
     BorderSpacing.Top = 7
     Caption = 'Target'
-    ClientHeight = 88
-    ClientWidth = 220
+    ClientHeight = 67
+    ClientWidth = 161
     ParentShowHint = False
     ShowHint = True
     TabOrder = 5
@@ -220,9 +220,9 @@ object ConvertSettingsForm: TConvertSettingsForm
       AnchorSideTop.Control = CrossPlatformCheckBox
       AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 24
-      Top = 32
-      Width = 125
+      Height = 17
+      Top = 25
+      Width = 88
       BorderSpacing.Top = 3
       BorderSpacing.Right = 6
       Caption = 'Support Delphi'
@@ -237,9 +237,9 @@ object ConvertSettingsForm: TConvertSettingsForm
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Side = asrBottom
       Left = 6
-      Height = 24
-      Top = 59
-      Width = 208
+      Height = 17
+      Top = 45
+      Width = 149
       BorderSpacing.Top = 3
       BorderSpacing.Right = 6
       BorderSpacing.Bottom = 5
@@ -253,9 +253,9 @@ object ConvertSettingsForm: TConvertSettingsForm
       AnchorSideLeft.Control = TargetGroupBox
       AnchorSideTop.Control = TargetGroupBox
       Left = 6
-      Height = 24
+      Height = 17
       Top = 5
-      Width = 123
+      Width = 89
       BorderSpacing.Left = 6
       BorderSpacing.Top = 5
       BorderSpacing.Right = 6
@@ -271,11 +271,11 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideTop.Control = UnitReplaceButton
     AnchorSideTop.Side = asrCenter
     Left = 514
-    Height = 28
-    Top = 28
+    Height = 21
+    Top = 25
     Width = 129
     BorderSpacing.Left = 15
-    ItemHeight = 20
+    ItemHeight = 13
     Style = csDropDownList
     TabOrder = 6
   end
@@ -286,12 +286,12 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideRight.Control = UnitReplaceComboBox
     AnchorSideRight.Side = asrBottom
     Left = 514
-    Height = 28
-    Top = 90
+    Height = 21
+    Top = 76
     Width = 129
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Top = 2
-    ItemHeight = 20
+    ItemHeight = 13
     Style = csDropDownList
     TabOrder = 7
   end
@@ -302,11 +302,11 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideRight.Control = UnitReplaceComboBox
     AnchorSideRight.Side = asrBottom
     Left = 514
-    Height = 28
-    Top = 205
+    Height = 21
+    Top = 181
     Width = 129
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 20
+    ItemHeight = 13
     Style = csDropDownList
     TabOrder = 8
   end
@@ -317,11 +317,11 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideRight.Control = UnitReplaceComboBox
     AnchorSideRight.Side = asrBottom
     Left = 514
-    Height = 28
-    Top = 280
+    Height = 21
+    Top = 249
     Width = 129
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 20
+    ItemHeight = 13
     Style = csDropDownList
     TabOrder = 9
   end
@@ -332,11 +332,11 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideRight.Control = UnitReplaceComboBox
     AnchorSideRight.Side = asrBottom
     Left = 514
-    Height = 28
-    Top = 146
+    Height = 21
+    Top = 129
     Width = 129
     Anchors = [akTop, akLeft, akRight]
-    ItemHeight = 20
+    ItemHeight = 13
     Style = csDropDownList
     TabOrder = 10
   end
@@ -348,7 +348,7 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideRight.Side = asrBottom
     Left = 541
     Height = 20
-    Top = 317
+    Top = 279
     Width = 102
     Anchors = [akTop, akRight]
     BorderSpacing.Left = 6
@@ -360,10 +360,10 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideTop.Control = ScanProgressBar
     AnchorSideTop.Side = asrCenter
     AnchorSideRight.Control = ScanProgressBar
-    Left = 365
-    Height = 20
-    Top = 317
-    Width = 170
+    Left = 411
+    Height = 13
+    Top = 283
+    Width = 124
     Anchors = [akTop, akRight]
     BorderSpacing.Right = 6
     Caption = 'Scanning parent directory'
@@ -377,7 +377,7 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideRight.Side = asrBottom
     Left = 541
     Height = 25
-    Top = 338
+    Top = 300
     Width = 102
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Top = 1
@@ -390,18 +390,18 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideTop.Control = FuncReplaceButton
     AnchorSideTop.Side = asrBottom
     Left = 381
-    Height = 24
-    Top = 237
-    Width = 241
+    Height = 17
+    Top = 209
+    Width = 172
     BorderSpacing.Top = 5
     Caption = 'Add comment after replacement'
     TabOrder = 13
   end
   object InputPathLabel: TLabel
     Left = 12
-    Height = 20
+    Height = 13
     Top = 9
-    Width = 99
+    Width = 73
     Caption = 'InputPathLabel'
     ParentColor = False
   end
@@ -412,8 +412,8 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideRight.Control = UnitReplaceDivider
     AnchorSideBottom.Control = TargetGroupBox
     Left = 12
-    Height = 42
-    Top = 30
+    Height = 77
+    Top = 23
     Width = 359
     Anchors = [akTop, akLeft, akRight, akBottom]
     BorderSpacing.Top = 1
@@ -427,22 +427,24 @@ object ConvertSettingsForm: TConvertSettingsForm
     AnchorSideTop.Control = TargetGroupBox
     AnchorSideTop.Side = asrBottom
     Left = 12
-    Height = 142
+    Height = 107
     Top = 195
-    Width = 273
+    Width = 201
     AutoSize = True
     BorderSpacing.Top = 3
     Caption = 'Other'
-    ClientHeight = 117
-    ClientWidth = 269
+    ClientHeight = 89
+    ClientWidth = 197
+    ParentShowHint = False
+    ShowHint = True
     TabOrder = 15
     object DelphiDefineCheckBox: TCheckBox
       AnchorSideLeft.Control = OtherOptGroupBox
       AnchorSideTop.Control = OtherOptGroupBox
       Left = 6
-      Height = 24
+      Height = 17
       Top = 5
-      Width = 233
+      Width = 163
       BorderSpacing.Left = 6
       BorderSpacing.Top = 5
       BorderSpacing.Right = 6
@@ -456,9 +458,9 @@ object ConvertSettingsForm: TConvertSettingsForm
       AnchorSideTop.Control = DelphiDefineCheckBox
       AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 24
-      Top = 32
-      Width = 222
+      Height = 17
+      Top = 25
+      Width = 159
       BorderSpacing.Top = 3
       BorderSpacing.Right = 6
       Caption = 'Make backup of changed files'
@@ -473,9 +475,9 @@ object ConvertSettingsForm: TConvertSettingsForm
       AnchorSideTop.Control = BackupCheckBox
       AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 24
-      Top = 59
-      Width = 257
+      Height = 17
+      Top = 45
+      Width = 185
       BorderSpacing.Top = 3
       BorderSpacing.Right = 6
       BorderSpacing.Bottom = 5
@@ -489,9 +491,9 @@ object ConvertSettingsForm: TConvertSettingsForm
       AnchorSideTop.Control = KeepFileOpenCheckBox
       AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 24
-      Top = 88
-      Width = 212
+      Height = 17
+      Top = 67
+      Width = 155
       BorderSpacing.Top = 3
       BorderSpacing.Right = 6
       BorderSpacing.Bottom = 5
