--- a/ide/frames/project_resources_options.lfm
+++ b/ide/frames/project_resources_options.lfm
@@ -6,8 +6,8 @@ object ResourcesOptionsFrame: TResourcesOptionsFrame
   ClientHeight = 330
   ClientWidth = 742
   TabOrder = 0
-  DesignLeft = 561
-  DesignTop = 308
+  DesignLeft = 735
+  DesignTop = 393
   object lbResources: TListView
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = ToolBar1
@@ -36,10 +36,12 @@ object ResourcesOptionsFrame: TResourcesOptionsFrame
         Width = 326
       end>
     HideSelection = False
+    ReadOnly = True
     RowSelect = True
     TabOrder = 0
     ViewStyle = vsReport
     OnInsert = lbResourcesInsert
+    OnKeyDown = lbResourcesKeyDown
     OnSelectItem = lbResourcesSelectItem
   end
   object ToolBar1: TToolBar
