--- a/lcl/forms/finddlgunit.lfm
+++ b/lcl/forms/finddlgunit.lfm
@@ -1,37 +1,41 @@
 object FindDialogForm: TFindDialogForm
   Left = 499
-  Height = 131
+  Height = 123
   Top = 403
-  Width = 444
+  Width = 480
   ActiveControl = FindButton
   BorderIcons = [biSystemMenu, biHelp]
   Caption = 'Find'
-  ClientHeight = 131
-  ClientWidth = 444
+  ClientHeight = 123
+  ClientWidth = 480
   OnCreate = FormCreate
   Position = poScreenCenter
-  LCLVersion = '0.9.27'
+  LCLVersion = '1.3'
   object FindLabel: TLabel
+    AnchorSideTop.Control = EditFind
+    AnchorSideTop.Side = asrCenter
     Left = 6
-    Height = 18
-    Top = 15
-    Width = 70
+    Height = 16
+    Top = 13
+    Width = 74
     Caption = 'Text to find'
     FocusControl = EditFind
     ParentColor = False
   end
   object EditFind: TEdit
-    Left = 72
-    Height = 23
+    AnchorSideLeft.Control = FindLabel
+    AnchorSideLeft.Side = asrBottom
+    Left = 80
+    Height = 22
     Top = 10
-    Width = 269
+    Width = 297
     Anchors = [akTop, akLeft, akRight]
     OnChange = EditFindChange
     TabOrder = 0
     Text = 'EditFind'
   end
   object FindButton: TButton
-    Left = 349
+    Left = 385
     Height = 25
     Top = 8
     Width = 91
@@ -41,7 +45,7 @@ object FindDialogForm: TFindDialogForm
     TabOrder = 1
   end
   object CancelButton: TButton
-    Left = 349
+    Left = 385
     Height = 25
     Top = 40
     Width = 91
@@ -51,28 +55,17 @@ object FindDialogForm: TFindDialogForm
     ModalResult = 2
     TabOrder = 2
   end
-  object WholeWordsOnlyCheckBox: TCheckBox
-    Left = 6
-    Height = 22
-    Top = 51
-    Width = 133
-    Caption = 'Whole words only'
-    TabOrder = 3
-  end
-  object CaseSensitiveCheckBox: TCheckBox
-    Left = 6
-    Height = 22
-    Top = 78
-    Width = 116
-    Caption = 'Case sensitive'
-    TabOrder = 4
-  end
   object DirectionRadioGroup: TRadioGroup
+    AnchorSideLeft.Control = FlagsPanel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = EditFind
+    AnchorSideTop.Side = asrBottom
     Left = 144
     Height = 45
-    Top = 46
+    Top = 38
     Width = 197
     AutoFill = True
+    BorderSpacing.Around = 6
     Caption = 'Direction'
     ChildSizing.LeftRightSpacing = 6
     ChildSizing.TopBottomSpacing = 6
@@ -82,30 +75,64 @@ object FindDialogForm: TFindDialogForm
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 2
-    ClientHeight = 26
-    ClientWidth = 193
+    ClientHeight = 23
+    ClientWidth = 189
     Columns = 2
     Items.Strings = (
       'Forward'
       'Backward'
     )
-    TabOrder = 5
+    TabOrder = 3
   end
   object HelpButton: TButton
-    Left = 349
+    Left = 385
     Height = 25
-    Top = 100
+    Top = 92
     Width = 91
     Anchors = [akRight, akBottom]
     Caption = 'Help'
-    TabOrder = 6
+    TabOrder = 4
   end
-  object EntireScopeCheckBox: TCheckBox
+  object FlagsPanel: TPanel
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = EditFind
+    AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 22
-    Top = 103
+    Height = 66
+    Top = 38
     Width = 132
-    Caption = 'Search entire file'
-    TabOrder = 7
+    AutoSize = True
+    BorderSpacing.Around = 6
+    BevelOuter = bvNone
+    ChildSizing.VerticalSpacing = 6
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 1
+    ClientHeight = 66
+    ClientWidth = 132
+    TabOrder = 5
+    object WholeWordsOnlyCheckBox: TCheckBox
+      Left = 0
+      Height = 18
+      Top = 0
+      Width = 132
+      Caption = 'Whole words only'
+      TabOrder = 0
+    end
+    object CaseSensitiveCheckBox: TCheckBox
+      Left = 0
+      Height = 18
+      Top = 24
+      Width = 132
+      Caption = 'Case sensitive'
+      TabOrder = 1
+    end
+    object EntireScopeCheckBox: TCheckBox
+      Left = 0
+      Height = 18
+      Top = 48
+      Width = 132
+      Caption = 'Search entire file'
+      TabOrder = 2
+    end
   end
 end
