--- a/lcl/forms/finddlgunit.lfm
+++ b/lcl/forms/finddlgunit.lfm
@@ -3,7 +3,6 @@ object FindDialogForm: TFindDialogForm
   Height = 123
   Top = 403
   Width = 480
-  ActiveControl = FindButton
   BorderIcons = [biSystemMenu, biHelp]
   Caption = 'Find'
   ClientHeight = 123
@@ -18,6 +17,7 @@ object FindDialogForm: TFindDialogForm
     Height = 16
     Top = 13
     Width = 74
+    BorderSpacing.Right = 2
     Caption = 'Text to find'
     FocusControl = EditFind
     ParentColor = False
@@ -25,42 +25,22 @@ object FindDialogForm: TFindDialogForm
   object EditFind: TEdit
     AnchorSideLeft.Control = FindLabel
     AnchorSideLeft.Side = asrBottom
-    Left = 80
+    AnchorSideRight.Control = BtnPanel
+    Left = 82
     Height = 22
     Top = 10
-    Width = 297
+    Width = 294
     Anchors = [akTop, akLeft, akRight]
     OnChange = EditFindChange
     TabOrder = 0
     Text = 'EditFind'
-  end
-  object FindButton: TButton
-    Left = 385
-    Height = 25
-    Top = 8
-    Width = 91
-    Anchors = [akTop, akRight]
-    Caption = 'Find more'
-    Default = True
-    TabOrder = 1
-  end
-  object CancelButton: TButton
-    Left = 385
-    Height = 25
-    Top = 40
-    Width = 91
-    Anchors = [akTop, akRight]
-    Cancel = True
-    Caption = 'Cancel'
-    ModalResult = 2
-    TabOrder = 2
   end
   object DirectionRadioGroup: TRadioGroup
     AnchorSideLeft.Control = FlagsPanel
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = EditFind
     AnchorSideTop.Side = asrBottom
-    Left = 144
+    Left = 143
     Height = 45
     Top = 38
     Width = 197
@@ -82,16 +62,7 @@ object FindDialogForm: TFindDialogForm
       'Forward'
       'Backward'
     )
-    TabOrder = 3
-  end
-  object HelpButton: TButton
-    Left = 385
-    Height = 25
-    Top = 92
-    Width = 91
-    Anchors = [akRight, akBottom]
-    Caption = 'Help'
-    TabOrder = 4
+    TabOrder = 1
   end
   object FlagsPanel: TPanel
     AnchorSideLeft.Control = Owner
@@ -100,7 +71,7 @@ object FindDialogForm: TFindDialogForm
     Left = 6
     Height = 66
     Top = 38
-    Width = 132
+    Width = 131
     AutoSize = True
     BorderSpacing.Around = 6
     BevelOuter = bvNone
@@ -108,13 +79,13 @@ object FindDialogForm: TFindDialogForm
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
     ClientHeight = 66
-    ClientWidth = 132
-    TabOrder = 5
+    ClientWidth = 131
+    TabOrder = 2
     object WholeWordsOnlyCheckBox: TCheckBox
       Left = 0
       Height = 18
       Top = 0
-      Width = 132
+      Width = 131
       Caption = 'Whole words only'
       TabOrder = 0
     end
@@ -122,7 +93,7 @@ object FindDialogForm: TFindDialogForm
       Left = 0
       Height = 18
       Top = 24
-      Width = 132
+      Width = 131
       Caption = 'Case sensitive'
       TabOrder = 1
     end
@@ -130,8 +101,56 @@ object FindDialogForm: TFindDialogForm
       Left = 0
       Height = 18
       Top = 48
-      Width = 132
+      Width = 131
       Caption = 'Search entire file'
+      TabOrder = 2
+    end
+  end
+  object BtnPanel: TPanel
+    Left = 376
+    Height = 123
+    Top = 0
+    Width = 104
+    Align = alRight
+    AutoSize = True
+    BevelOuter = bvNone
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.TopBottomSpacing = 6
+    ChildSizing.VerticalSpacing = 6
+    ClientHeight = 123
+    ClientWidth = 104
+    TabOrder = 3
+    object FindButton: TButton
+      Left = 6
+      Height = 20
+      Top = 6
+      Width = 92
+      Align = alTop
+      AutoSize = True
+      Caption = 'Find more'
+      Default = True
+      TabOrder = 0
+    end
+    object CancelButton: TButton
+      Left = 6
+      Height = 20
+      Top = 32
+      Width = 92
+      Align = alTop
+      AutoSize = True
+      Cancel = True
+      Caption = 'Cancel'
+      ModalResult = 2
+      TabOrder = 1
+    end
+    object HelpButton: TButton
+      Left = 6
+      Height = 20
+      Top = 97
+      Width = 92
+      Align = alBottom
+      AutoSize = True
+      Caption = 'Help'
       TabOrder = 2
     end
   end
